# MiniShell

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md  annotated.html  classes.html  classminsh_1_1controller_1_1ShellController-members.html  classminsh_1_1controller_1_1ShellController.html  classminsh_1_1executor_1_1Executor-members.html  classminsh_1_1executor_1_1Executor.html  classminsh_1_1executor_1_1Executor__inherit__graph.dot  classminsh_1_1executor_1_1ExternalExecutor-members.html  classminsh_1_1executor_1_1ExternalExecutor.html  classminsh_1_1executor_1_1ExternalExecutor__inherit__graph.dot  classminsh_1_1executor_1_1InternalExecutor-members.html  classminsh_1_1executor_1_1InternalExecutor.html  classminsh_1_1executor_1_1InternalExecutor__coll__graph.dot  conceptminsh_1_1executor_1_1InternalExecutorFn.html  concepts.html  controller_8cpp_source.html  controller_8hpp_source.html  dir_3641795f5ac83aac21456e1fce038978.html  dir_3641795f5ac83aac21456e1fce038978_dep.dot  dir_39b9d54b040febeebc00140e5c10ba61.html  dir_39b9d54b040febeebc00140e5c10ba61_dep.dot  dir_41ef5d8a90b9cc03a02949a5c062e6f0.html  dir_41ef5d8a90b9cc03a02949a5c062e6f0_dep.dot  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_6cd8491d143eb218b70983dbdb3c58bc.html  dir_6cd8491d143eb218b70983dbdb3c58bc_dep.dot  dir_7b9192311dfc815bce99bedc61b887a5.html  dir_7b9192311dfc815bce99bedc61b887a5_dep.dot  dir_d44c64559bbebec7f509842c48db8b23.html  dir_fa411ff0ecae9a16ab7f76ee0c740962.html  dir_fa411ff0ecae9a16ab7f76ee0c740962_dep.dot  executor_8hpp_source.html  external_8cpp_source.html  external_8hpp_source.html  files.html  (+12 more)
apps/: CMakeLists.txt  shell.cpp
cmake/: fetch.cmake  install.cmake
docs/: CMakeLists.txt  Doxyfile.in
search/: all_2.js  all_3.js  all_5.js  all_6.js  all_7.js  all_9.js  classes_0.js  classes_1.js  classes_2.js  concepts_0.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  pages_0.js  (+2 more)
src/: CMakeLists.txt
src/controller/: controller.cpp
src/controller/executors/: external.cpp  internal.cpp
src/executor/: executor.cpp  external.cpp
src/parser/: tokenize.cpp
tests/: CMakeLists.txt  parser_test.cpp  shell_test.cpp
(+9 files in other folders)
